# auctioneer

./: .gitignore  Cargo.toml  README.md  metadata.json
auctioneer/: Cargo.toml
auctioneer/src/: ICON  context.rs  helpers.rs  lib.rs  llm_api.rs  llm_types.rs  prompts.rs  structs.rs
auctioneer/src/contracts/: mod.rs
buyui/: index.html  package.json  tsconfig.json  vite.config.ts
buyui/app/: page.tsx
buyui/components/: Footer.tsx  Header.tsx
buyui/components/scaffold-eth/: ProgressBar.tsx
buyui/contracts/: NFTEscrow.json
buyui/src/: App.tsx  index.css  main.tsx  wagmi.config.ts
buyui/src/abis/: NFTEscrow.json
buyui/src/components/: WalletModal.tsx
buyui/src/components/layout/: Header.tsx
buyui/src/components/ui/: dialog.tsx
pkg/: manifest.json  openai.wasm
pkg/ui/: index.html  nft-manager.html
pkg/ui/assets/: index-383827d3.css
pkg/ui/buy/: 404.html  index.html  index.txt
pkg/ui/buy/assets/: ccip-B9cp2kS2.js  ccip-BIJJrXSz.js  ccip-BJ5h863j.js  ccip-BLkO8Zyc.js  ccip-BseoEd9B.js  ccip-CrIR2o8d.js  ccip-CwjgyfrI.js  ccip-DCrTzEm5.js  ccip-Dg9G1gke.js  ccip-Dw9VFqny.js  ccip-DxPBDFFD.js  index--unTYgf6.js  index-B0DWNKe7.css  index-B0SlumMv.js  index-B3czRNtE.js  index-BA2nWDIN.js  index-BCJ_oBw0.js  index-BJ5yzyNn.js  index-BK-mHcMx.js  index-BLh0YmEb.js  index-BMx5OoS5.js  index-BO05sgNr.js  index-BVYRErey.js  index-BXJ_YoJ7.js  index-BlN32DCJ.js  index-BlRMNdau.css  index-BmzVoZIQ.css  (+32 more)
pkg/ui/sell/: 404.html  index.html  index.txt
sellui/: .eslintrc.json  index.html  package.json  scaffold.config.ts  uno.config.ts  vite.config.ts
sellui/app/: layout.tsx  page.tsx
sellui/src/: App.tsx  index.css  wagmi.config.ts
sellui/src/components/: SwitchNetworks.tsx  WalletModal.tsx
sellui/src/pages/: index.tsx
sellui/styles/: globals.css
(+115 files in other folders)
