[package]
name = "auctioneer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "6f8ebb4" }
alloy-primitives = "0.6.3"
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "6f8ebb4" }
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
